tests/ui/layout/align-type/cycle.stderr
error[E0391]: cycle detected when evaluating type-level constant
  --> $DIR/cycle.rs:7:18
   |
LL |     align: Align<{align_of::<Evil>()}>,
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `Evil::align::{constant#0}`...
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: ...which requires simplifying constant for the type system `core::mem::SizedTypeProperties::ALIGN`...
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: ...which requires const-evaluating + checking `core::mem::SizedTypeProperties::ALIGN`...
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   = note: ...which requires computing layout of `Evil`...
   = note: ...which requires computing layout of `core::mem::Align<{align_of::<Evil>()}>`...
note: ...which requires normalizing `core::mem::Align<{align_of::<Evil>()}>`...
  --> $DIR/cycle.rs:7:18
   |
LL |     align: Align<{align_of::<Evil>()}>,
   |                  ^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires evaluating type-level constant, completing the cycle
note: cycle used when checking that `Evil` is well-formed
  --> $DIR/cycle.rs:7:18
   |
LL |     align: Align<{align_of::<Evil>()}>,
   |                  ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
